examples/good/10-list-brackets.afl
main::[Int];

Let main = ([(0),(1)]);