examples/bad/3-if-two-plus-two.afl
main::Int;

Let main = (if ((2)+(2)) then (1) else (0));